--- a/generated_content.info.yml
+++ b/generated_content.info.yml
@@ -1,5 +1,5 @@
 name: Generated Content
 type: module
 description: Programmatically generate content.
-core_version_requirement: ^9 || ^10
+core_version_requirement: ^9 || ^10 || ^11
 package: Other
