--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -42,7 +42,7 @@ commands:
     cmd: |
       pushd "build" >/dev/null || exit 1
       vendor/bin/phpcs
-      vendor/bin/phpstan --memory-limit=-1
+      vendor/bin/phpstan
       vendor/bin/rector --clear-cache --dry-run
       vendor/bin/phpmd . text phpmd.xml
       vendor/bin/twig-cs-fixer
