--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,8 @@ job-test: &job-test
   steps:
     - checkout
 
-    name: Upgrade sqlite3
+    - run:
+        name: Upgrade sqlite3
         command: |
           wget https://www.sqlite.org/2024/sqlite-autoconf-3450300.tar.gz -O /tmp/sqlite.tar.gz
           tar -xzf /tmp/sqlite.tar.gz -C /tmp
