--- a/phpstan.neon
+++ b/phpstan.neon
@@ -29,3 +29,15 @@ parameters:
     -
       message: "#^Parameter \\#2 \\$value of method Drupal\\\\Core\\\\Database\\\\Query\\\\ConditionInterface::condition\\(\\) expects array\\|Drupal\\\\Core\\\\Database\\\\Query\\\\SelectInterface\\|string\\|null, int<min, -1>\\|int<1, max>\\|string given.$#"
       reportUnmatched: false
+    -
+      # Hook implementations do not provide docblocks for parameters, so there
+      # is no way to provide this information.
+      messages:
+        - '#.* no value type specified in iterable type array#'
+        - '#.* has no return type specified#'
+      paths:
+        - web/modules/custom/*
+        - web/themes/custom/*
+      reportUnmatched: false
+  
+  reportUnmatchedIgnoredErrors: false
