--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,12 +29,14 @@ job-test: &job-test
           make && sudo make install
           sudo ldconfig
           echo "export LD_LIBRARY_PATH=/usr/local/lib" >> $BASH_ENV
+
     - run:
         name: Install PCOV
         command: |
           sudo pecl install pcov
           echo "extension=pcov.so" | sudo tee -a /usr/local/etc/php/conf.d/pcov.ini
           echo "pcov.enabled=1" | sudo tee -a /usr/local/etc/php/conf.d/pcov.ini
+
     - run:
         name: Assemble the codebase
         command: .devtools/assemble.sh
@@ -76,6 +78,8 @@ job-test: &job-test
         name: Run tests
         command: vendor/bin/phpunit || [ "${CI_TEST_IGNORE_FAILURE:-0}" -eq 1 ]
         working_directory: build
+        environment:
+          BROWSERTEST_OUTPUT_DIRECTORY: /tmp
 
     - store_test_results:
         path: .logs/test_results
@@ -89,7 +93,7 @@ job-test: &job-test
     - run:
         name: Upload code coverage reports to Codecov
         command: |
-          if [ -n "${CODECOV_TOKEN}" ] && [ -d .logs/coverage/phpunit ]; then
+          if [ -z "${CIRCLE_TAG-}" ] && [ -n "${CODECOV_TOKEN-}" ] && [ -d .logs/coverage/phpunit ]; then
             curl -Os https://cli.codecov.io/latest/linux/codecov && sudo chmod +x codecov
             ./codecov --verbose upload-process --fail-on-error -n "circleci-$CIRCLE_JOB" -s .logs/coverage
           fi
@@ -185,6 +189,8 @@ workflows:
             - test-php-8.2
             - test-php-8.2-legacy
             - test-php-8.2-next
+            - test-php-8.3
+            - test-php-8.3-next
           filters:
             tags:
               only: /.*/
