--- a/.editorconfig
+++ b/.editorconfig
@@ -19,6 +19,9 @@ indent_size = 2
 [*.{json,lock}]
 indent_size = 4
 
+[package.json]
+indent_size = 2
+
 [*.{yml,yaml}]
 indent_size = 2
 
@@ -27,3 +30,6 @@ indent_size = 2
 
 [*.xml]
 indent_size = 4
+
+[Makefile*]
+indent_style = tab
